--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -16,8 +16,12 @@
             <div class="col text-center mt-3">
                 <h2 class="text-black">All Products</h2>
                 {% for c in current_categories %}
-                    <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+                    <a class="category-badge text-decoration-none"
+                    href="{% url 'products' %}?category={{ c.name }}">
+                        <span class="p-2 mt-2 badge badge-white
+                            text-black rounded-0 border border-dark">
+                            {{ c.friendly_name }}
+                        </span>
                     </a>
                 {% endfor %}
                 <hr class="w-50 mb-1">
@@ -26,16 +30,33 @@
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
-                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                    <div class="col-12 col-md-6 my-auto order-md-last
+                        d-flex justify-content-center justify-content-md-end">
                         <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
-                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-                                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
-                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
-                                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+                            <select id="sort-selector" class="custom-select
+                                custom-select-sm rounded-0 border
+                                border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>
+                                    Sort by...
+                                </option>
+                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>
+                                    Name (A-Z)
+                                </option>
+                                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>
+                                    Name (Z-A)
+                                </option>
+                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>
+                                    Price (low to high)
+                                </option>
+                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>
+                                    Price (high to low)
+                                </option>
+                                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>
+                                    Category (A-Z)
+                                </option>
+                                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>
+                                    Category (Z-A)
+                                </option>
                             </select>
                         </div>
                     </div>
@@ -54,11 +75,13 @@
                             <div class="card h-100 border-0">
                                 {% if product.image %}
                                     <a href="{% url 'product_detail' product.id %}">
-                                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                        <img class="card-img-top img-fluid"
+                                            src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
                                 {% else %}
                                     <a href="{% url 'product_detail' product.id %}">
-                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                        <img class="card-img-top img-fluid"
+                                            src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                     </a>
                                 {% endif %}
                                 <div class="card-body pb-0">
@@ -66,9 +89,13 @@
                                         <span class="favourite-heart">
                                             {% if user.is_authenticated %}
                                                 {% if product.name in favourites %}
-                                                    <a href="{% url 'remove_favourite' product.id user.id %}"><i class="fas fa-heart fa-2x"></i></a>
+                                                    <a href="{% url 'remove_favourite' product.id user.id %}">
+                                                        <i class="fas fa-heart fa-2x"></i>
+                                                    </a>
                                                 {% else %}
-                                                    <a href="{% url 'add_favourite' product.id user.id %}"><i class="far fa-heart fa-2x"></i></a>
+                                                    <a href="{% url 'add_favourite' product.id user.id %}">
+                                                        <i class="far fa-heart fa-2x"></i>
+                                                    </a>
                                                 {% endif %}
                                             {% endif %}
                                         </span>
@@ -85,7 +112,6 @@
                                                     </a>
                                                 </p>
                                             {% endif %}
-                                            
                                         </div>
                                     </div>
                                 </div>
@@ -95,7 +121,7 @@
                             <div class="col-12 d-sm-none mb-5">
                                 <hr>
                             </div>
-                        {% endif %}                        
+                        {% endif %}
                         {% if forloop.counter|divisibleby:2 %}
                             <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
                                 <hr>
@@ -116,7 +142,8 @@
             </div>
         </div>
     </div>
-    <div class="bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
+    <div class="bg-warning btt-button text-black
+        shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100 text-black">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>
@@ -128,56 +155,47 @@
     <script>
         // Get the modal
         let modal = document.getElementById("myModal");
-        
         // Get the button that opens the modal
         let btn = document.getElementById("myBtn");
-        
         // Get the <span> element that closes the modal
         let span = document.getElementsByClassName("close")[0];
-        
-        // When the user clicks the button, open the modal 
+        // When the user clicks the button, open the modal
         btn.onclick = function() {
-          modal.style.display = "block";
+            modal.style.display = "block";
         }
-        
         // When the user clicks on <span> (x), close the modal
+        // displays an error when inspecting via console but removing breaks the modal
         span.onclick = function() {
-          modal.style.display = "none";
+            modal.style.display = "none";
         }
-        
         // When the user clicks anywhere outside of the modal, close it
         window.onclick = function(event) {
           if (event.target == modal) {
-            modal.style.display = "none";
+              modal.style.display = "none";
           }
         }
-    </script>    
+    </script>
     <script>
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0)
-		})
+    $('.btt-link').click(function(e) {
+        window.scrollTo(0,0)
+    })
 	</script>
-    
     <script>
-        $('#sort-selector').change(function() {
-            let selector = $(this);
-            let currentUrl = new URL(window.location);
-
-            let selectedVal = selector.val();
-            if(selectedVal != "reset"){
-                let sort = selectedVal.split("_")[0];
-                let direction = selectedVal.split("_")[1];
-
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
-
-                window.location.replace(currentUrl);
-            }
-        })
+    $('#sort-selector').change(function() {
+        let selector = $(this);
+        let currentUrl = new URL(window.location);
+        let selectedVal = selector.val();
+        if(selectedVal != "reset"){
+            let sort = selectedVal.split("_")[0];
+            let direction = selectedVal.split("_")[1];
+            currentUrl.searchParams.set("sort", sort);
+            currentUrl.searchParams.set("direction", direction);
+            window.location.replace(currentUrl);
+        } else {
+            currentUrl.searchParams.delete("sort");
+            currentUrl.searchParams.delete("direction");
+            window.location.replace(currentUrl);
+        }
+    })
     </script>
 {% endblock %}
