--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -22,49 +22,78 @@
                 <div class="image-container my-5">
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                            <img class="card-img-top img-fluid"
+                            src="{{ product.image.url }}"
+                            alt="{{ product.name }}">
                         </a>
                         {% else %}
                         <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                            <img class="card-img-top img-fluid"
+                            src="{{ MEDIA_URL }}noimage.png"
+                            alt="{{ product.name }}">
                         </a>
                     {% endif %}
                 </div>
             </div>
             <div class="text-black col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <h4 class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</h4>
+                    <h4 class="lead mb-0 text-left font-weight-bold">
+                        £{{ product.price }}
+                    </h4>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
-                        <a class="text-black" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                        <a class="text-black"
+                            href="{% url 'products' %}?category={{ product.category.name }}">
+                            <i class="fas fa-tag mr-1"></i>
+                            {{ product.category.friendly_name }}
                         </a>
                     </p>
                     {% endif %}
-
                     {% if request.user.is_superuser %}
                         <!-- Trigger/Open The Modal -->
                         <small>
-                            <button class="delete-button text-danger" id="myBtn">Delete Product</button>
+                            <button class="delete-button text-danger"
+                            id="myBtn">
+                                Delete Product
+                            </button>
                         </small>
                         <!-- The Modal -->
                         <div id="myModal" class="modal">
                             <!-- Modal content -->
                             <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <p>Are you sure you want to delete this item?</p>
+                                <span class="close">&times; </span>
+                                <p>
+                                    Are you sure you want to delete this item?
+                                </p>
                                 <div>
-                                    <a class="text-danger" href="{% url 'delete_product' product.id %}"><button class=" delete-button text-danger">Delete Product</button></a>
-                                    <a class="text-info" href="{% url 'product_detail' product.id %}"><button class="edit-button text-info">Cancel</button></a>
+                                    <a class="text-danger"
+                                    href="{% url 'delete_product' product.id %}">
+                                        <button class="delete-button text-danger">
+                                            Delete Product
+                                        </button>
+                                    </a>
+                                    <a class="text-info"
+                                        href="{% url 'product_detail' product.id %}">
+                                        <button class="edit-button text-info">
+                                            Cancel
+                                        </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <small class="ml-3">
-                            <button class="edit-button"><a class="edit-button" href="{% url 'edit_product' product.id %}">Edit Product</a></button>
+                            <button class="edit-button">
+                                <a class="edit-button"
+                                    href="{% url 'edit_product' product.id %}">
+                                    Edit Product
+                                </a>
+                            </button>
                         </small>
                     {% endif %}
                     <p class="mt-1">{{ product.description }}</p>
-                    <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
+                    <form class="form"
+                        action="{% url 'add_to_basket' product.id %}"
+                        method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
@@ -72,20 +101,26 @@
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <button
+                                                class="decrement-qty btn btn-black rounded-0"
+                                                data-item_id="{{ product.id }}"
+                                                id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99"
+                                        <input class="form-control qty_input"
+                                            type="number"
+                                            name="quantity" value="1"
+                                            min="1" max="99"
                                             data-item_id="{{ product.id }}"
                                             id="id_qty_{{ product.id }}">
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-black rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <button 
+                                                class="increment-qty btn btn-black rounded-0"
+                                                data-item_id="{{ product.id }}"
+                                                id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
                                                 </span>
@@ -97,18 +132,27 @@
                         </div>
                         <div class="row">
                             <div class="col-12 mt-1">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-1">
+                                <a href="{% url 'products' %}"
+                                class="btn btn-outline-black rounded-0 mt-1">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
+                                    <span class="text-uppercase">
+                                        Keep Shopping
+                                    </span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-1" value="Add to Basket">
-                                <a href="{% url 'view_basket' %}" class="btn checkout-button rounded-0 mt-1">
-                                    <span class="text-uppercase">View Basket</span>
+                                <input type="submit" class="btn btn-black
+                                rounded-0 text-uppercase mt-1"
+                                value="Add to Basket">
+                                <a href="{% url 'view_basket' %}"
+                                class="btn checkout-button rounded-0 mt-1">
+                                    <span class="text-uppercase">
+                                        View Basket
+                                    </span>
                                 </a>
                             </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                            <input type="hidden" name="redirect_url"
+                            value="{{ request.path }}">
                         </div>
                     </form>
                 </div>
@@ -130,12 +174,22 @@
                         {% if user == review.author %}
                         <div class="row form-group">
                             <div class="col-6">
-                                <button class="edit-button btn-sm"><a class="edit-button" href="{% url 'edit_review' product.id review.id %}">Edit Review</a></button>
+                                <button class="edit-button btn-sm">
+                                    <a class="edit-button"
+                                    href="{% url 'edit_review' product.id review.id %}">
+                                        Edit Review
+                                    </a>
+                                </button>
                             </div>
                             <div class="col-6">
-                                <form action="{% url 'delete_review' product.id review.id %}" method="POST">
+                                <form
+                                    action="{% url 'delete_review' product.id review.id %}"
+                                    method="POST">
                                     {% csrf_token %}
-                                    <button class="delete-button btn-sm" type="submit">Delete Review</button>
+                                    <button class="delete-button btn-sm"
+                                        type="submit">
+                                        Delete Review
+                                    </button>
                                 </form>
                             </div>
                         </div>
@@ -144,8 +198,11 @@
                 {% else %}
                     <div class="col">
                         <div class="card">
-                            <h4>There are no reviews for {{ product.name }} yet.</h4>
-                            <h5 class="">Why don't you add one?</h5>
+                            <h4>
+                                There are no reviews for
+                                {{ product.name }} yet.
+                            </h4>
+                            <h5>Why don't you add one?</h5>
                         </div>
                     </div>
                 {% endif %}
@@ -162,12 +219,18 @@
                     </div>
                     <div class="row form-group">
                         <div class="col-6">
-                            <button type="reset" class="delete-button btn-sm bg-danger">
-                                Reset Form <i class="fas fa-undo ml-2"></i>
+                            <button type="reset"
+                                class="delete-button btn-sm bg-danger">
+                                Reset Form
+                                <i class="fas fa-undo ml-2"></i>
                             </button>
                         </div>
                         <div class="col-6">
-                            <button class="button edit-button btn-sm" type="submit">Add Review <i class="fas fa-plus ml-2"></i></button>
+                            <button class="button edit-button btn-sm"
+                            type="submit">
+                                Add Review
+                                <i class="fas fa-plus ml-2"></i>
+                            </button>
                         </div>
                     </div>
                 </form>
@@ -175,14 +238,20 @@
         {% else %}
         <div class="rows">
             <div class="col-6">
-                <h6 class="">Please <a href="{% url 'account_login' %}">log in</a> to add a review of a product.</h6>
+                <h6 class="">Please
+                    <a href="{% url 'account_login' %}">
+                        log in
+                    </a>
+                    to add a review of a product.
+                </h6>
             </div>
         </div>
-        {% endif %} 
+        {% endif %}
         </div>
     </div>
-
-    <div class="form-group bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
+    <div class="form-group bg-warning btt-button
+    text-black shadow-sm rounded-0
+    border border-black">
         <a class="btt-link d-flex h-100 text-black">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>
@@ -192,37 +261,32 @@
 {% block postloadjs %}
 {{ block.super }}
 <script>
-    $('.btt-link').click(function(e) {
-        window.scrollTo(0,0)
-    })
+$('.btt-link').click(function(e) {
+    window.scrollTo(0,0)
+})
 </script>
 <script>
     // Get the modal
     let modal = document.getElementById("myModal");
-    
     // Get the button that opens the modal
     let btn = document.getElementById("myBtn");
-    
     // Get the <span> element that closes the modal
     let span = document.getElementsByClassName("close")[0];
-    
-    // When the user clicks the button, open the modal 
+    // When the user clicks the button, open the modal
     btn.onclick = function() {
       modal.style.display = "block";
     }
-    
     // When the user clicks on <span> (x), close the modal
     span.onclick = function() {
       modal.style.display = "none";
     }
-    
     // When the user clicks anywhere outside of the modal, close it
     window.onclick = function(event) {
       if (event.target == modal) {
         modal.style.display = "none";
       }
     }
-</script>    
+</script>
 
 {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
