tweaked a label in the nav that wasn't displaying a sweet

--- a/templates/includes/menu-nav.html
+++ b/templates/includes/menu-nav.html
@@ -18,11 +18,11 @@
             </a>
             <div class="dropdown-menu bg-info border-0" aria-labelledby="pic-n-mix-link">
                 <a href="{% url 'products' %}?category=fizzy_sweets" class="dropdown-item">Fizzy Sweets</a>
-                <a href="{% url 'products' %}?category=jelly_and_foam" class="dropdown-item">Jelly and Foam Sweets</a>
+                <a href="{% url 'products' %}?category=jelly_foam_sweets" class="dropdown-item">Jelly and Foam Sweets</a>
                 <a href="{% url 'products' %}?category=chocolate_toffee" class="dropdown-item">Chocolate and Toffee Sweets</a>
                 <a href="{% url 'products' %}?category=traditional_sweets" class="dropdown-item ">Traditional Sweets</a>
                 <a href="{% url 'products' %}?category=other_sweets" class="dropdown-item">Other Sweets</a>
-                <a href="{% url 'products' %}?category=fizzy_sweets,jelly_and_foam,chocolate_toffee,traditional_sweets,other_sweets" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
