changed the menu options to include a gift pack

--- a/templates/includes/menu-nav.html
+++ b/templates/includes/menu-nav.html
@@ -22,6 +22,7 @@
                 <a href="{% url 'products' %}?category=chocolate_toffee" class="dropdown-item">Chocolate and Toffee Sweets</a>
                 <a href="{% url 'products' %}?category=traditional_sweets" class="dropdown-item ">Traditional Sweets</a>
                 <a href="{% url 'products' %}?category=other_sweets" class="dropdown-item">Other Sweets</a>
+                <a href="{% url 'products' %}?category=gift_boxes" class="dropdown-item">Gift Packs</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
