--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
+                <h1 class="display-4 hero-text text-black">
                     Come on in and treat yourself to something nice
                 </h1>
                 <div class="my-5">
