--- a/basket/templates/basket/quantity-form.html
+++ b/basket/templates/basket/quantity-form.html
@@ -25,4 +25,5 @@
         </div>
     </div>
 </form>
-<a class="remove-item delete-button float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+<a class="update-link float-right edit-button"><small>Update</small></a>
+<a class="remove-item delete-button float-left" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
