--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 hero-text text-black">
-                    Come on in and treat yourself to something nice
+                    Come on in and treat yourself
                 </h1>
                 <div class="my-5">
                     <h4>
